# Remitwise-Contracts

./: .gitignore  ARCHITECTURE.md  CHANGELOG_CONTRACTS.md  COMPATIBILITY_QUICK_REFERENCE.md  Cargo.toml  DEPLOYMENT.md  NEW_CONTRACT_GUIDE.md  README.md  UPGRADE_GUIDE.md  VERSION_COMPATIBILITY.md  check_ci.sh
.github/: SOROBAN_VERSION_CHECKLIST.md
.github/workflows/: ci.yml
benchmarks/: .gitignore  baseline.json  thresholds.json
bill_payments/: Cargo.toml
bill_payments/src/: lib.rs  schedule.rs  test.rs
bill_payments/test_snapshots/: test_notification_flow.1.json
bill_payments/test_snapshots/test/: test_create_bill_emits_event.1.json  (+27 more)
bill_payments/tests/: gas_bench.rs  test_notifications.rs
data_migration/src/: lib.rs
docs/: adr-admin-role.md  gas-optimization.md
family_wallet/src/: lib.rs  test.rs
insurance/: Cargo.toml
insurance/src/: lib.rs  test.rs
integration_tests/: Cargo.toml  INTEGRATION_TESTING.md  README.md  run_tests.sh
integration_tests/test_snapshots/: test_multi_contract_user_flow.1.json  test_multiple_entities_creation.1.json  test_split_with_rounding.1.json
integration_tests/tests/: multi_contract_integration.rs
orchestrator/src/: lib.rs
remittance_split/: Cargo.toml  error.txt
remittance_split/src/: lib.rs  test.rs
remittance_split/tests/: fuzz_tests.rs  gas_bench.rs
reporting/src/: lib.rs  tests.rs
savings_goals/: Cargo.toml
savings_goals/src/: lib.rs  test.rs
scripts/: compare_gas_results.sh  run_gas_benchmarks.sh  seed_local.sh  update_baseline.sh  verify_cross_contract_invariants.py
(+202 files in other folders)
